--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url = jdbc:h2:mem:testdb
 spring.datasource.username = sa
 spring.datasource.password =
 
+jwt.secret = LYkgZiqpAPbfqWeyyFyMy9R+otBfOdaeqJ95REAY36Y=   
+jwt.expiration = 300000
+
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
@@ -10,3 +13,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.h2.console.enabled = true
 localhost:8080/h2-console
 spring.h2.console.path = /h2-ui
+
+spring.jackson.serialization.INDENT_OUTPUT=false
+spring.security.csrf.enabled=false
+
+spring.main.allow-bean-definition-overriding=true
+logging.level.org.springframework=DEBUG
