--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
+            <version>2.1.11</version>
         </dependency>
 
 
