--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.security.csrf.enabled=false
 
 spring.main.allow-bean-definition-overriding=true
 logging.level.org.springframework=DEBUG
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
